layout change and cleaned up code

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav">
   <a href="" class="navbar-brand">Name of app</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,12 +13,12 @@
       <li class="dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Catagories
+          Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Catagory 1</a>
-          <a class="dropdown-item" href="#">Catagory 2</a>
-          <a class="dropdown-item" href="#">Catagory 3</a>
+          <a class="dropdown-item" href="#">Category 1</a>
+          <a class="dropdown-item" href="#">Category 2</a>
+          <a class="dropdown-item" href="#">Category 3</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -39,16 +39,16 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <form>
-            <div class="form-group">
+            <div class="form-group" id="login">
               <label>Username</label>
               <input class="form-control" placeholder="Enter Username">
             </div>
-            <div class="form-group">
+            <div class="form-group" id="login">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" placeholder="Password">
             </div>
-            <div class="dropdown-divider"></div>
-            <button type="submit" class="btn btn-primary">Log In</button>
+            <div class="dropdown-divider" id="login"></div>
+            <button type="submit" class="btn btn-primary" id="login-btn">Log In</button>
           </form>
         </div>
       </li>
