--- a/views/partials/_postform.handlebars
+++ b/views/partials/_postform.handlebars
@@ -1,41 +1,35 @@
-<div class="col-4-lg">
-    <div class="row">
-        <div class="container">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Create a Post</h3>
-                </div>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="Title">Title of Post</label>
-                            <br>
-                            <input type="text" placeholder="Title">
-                        </div>
-                        <div class="form-group">
-                            <label for="Post">Post Content</label>
-                            <br>
-                            <input type="text" placeholder="Content">
-                        </div>
-                        <div class="form-group">
-                            <label for="Author">Author</label>
-                            <br>
-                            <input type="text" placeholder="Author">
-                        </div>
-                        <div class="form-group">
-                            <label for="Catagory">Catagory</label>
-                            <br>
-                            <select name="Catagory">
-                                <option>Catagory 1</option>
-                                <option>Catagory 2</option>
-                                <option>Catagory 3</option>
-                            </select>
-                        </div>
-                        <hr>
-                        <button type="submit" class="btn btn-primary">Post</button>
-                    </form>
-                </div>
+<div class="card" id="form">
+    <div class="card-header">
+        <h3>Create a Post</h3>
+    </div>
+    <div class="card-body">
+        <form>
+            <div class="form-group">
+                <label for="Title">Title of Post</label>
+                <br>
+                <input type="text" placeholder="Title">
             </div>
-        </div>
+            <div class="form-group">
+                <label for="Post">Post Content</label>
+                <br>
+                <input type="text" placeholder="Content">
+            </div>
+            <div class="form-group">
+                <label for="Author">Author</label>
+                <br>
+                <input type="text" placeholder="Author">
+            </div>
+            <div class="form-group">
+                <label for="Category">Category</label>
+                <br>
+                <select name="Category">
+                    <option>Category 1</option>
+                    <option>Category 2</option>
+                    <option>Category 3</option>
+                </select>
+            </div>
+            <hr>
+            <button class="btn btn-primary">Post</button>
+        </form>
     </div>
 </div>
