--- a/views/partials/_post.handlebars
+++ b/views/partials/_post.handlebars
@@ -1,27 +1,21 @@
-<div class="col-4-lg">
-    <div class="row">
-        <div class="container">
-            <div class="card">
-                <div class="card-header">
-                    <h3 id="title"></h3>
-                </div>
-                <div class="card-body">
-                    <div>
-                        <p id="body"></p>
-                    </div>
-                    <div>
-                        <p id="username"></p>
-                    </div>
-                    <div>
-                        <p id="postName"></p>
-                    </div>
-                    <hr>
-                    <div>
-                        <a href="" class="button" id="likes">❤️</a>
-                        <a href="" class="button" id="comments">💬</a>                        
-                    </div>
-                </div>
-            </div>
+<div class="card" id="post">
+    <div class="card-header">
+        <h3 id="title"></h3>
+    </div>
+    <div class="card-body">
+        <div>
+            <p id="body"></p>
+        </div>
+        <div>
+            <p id="username"></p>
+        </div>
+        <div>
+            <p id="postName"></p>
+        </div>
+        <hr>
+        <div>
+            <a class="button" id="likes">❤️</a>
+            <a class="button" id="comments">💬</a>
         </div>
     </div>
 </div>
