updated database model

--- a/views/partials/_postform.handlebars
+++ b/views/partials/_postform.handlebars
@@ -10,29 +10,29 @@
                         <div class="form-group">
                             <label for="Title">Title of Post</label>
                             <br>
-                            <input type="text" placeholder="Title">
+                            <input type="text" id="titleInput" placeholder="Title">
                         </div>
                         <div class="form-group">
                             <label for="Post">Post Content</label>
                             <br>
-                            <input type="text" placeholder="Content">
+                            <input type="text" id="postBody" placeholder="Content">
                         </div>
                         <div class="form-group">
                             <label for="Author">Author</label>
                             <br>
-                            <input type="text" placeholder="Author">
+                            <input type="text" id="username" placeholder="Author">
                         </div>
                         <div class="form-group">
                             <label for="Catagory">Catagory</label>
                             <br>
-                            <select name="Catagory">
+                            <select name="Catagory" id="Category-post">
                                 <option>Catagory 1</option>
                                 <option>Catagory 2</option>
                                 <option>Catagory 3</option>
                             </select>
                         </div>
                         <hr>
-                        <button type="submit" class="btn btn-primary">Post</button>
+                        <button class="btn btn-primary" id="submitPost">Post</button>
                     </form>
                 </div>
             </div>
