--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -41,14 +41,14 @@
           <form>
             <div class="form-group" id="login">
               <label>Username</label>
-              <input class="form-control" placeholder="Enter Username">
+              <input class="form-control" placeholder="Enter Username" id="userLogin">
             </div>
             <div class="form-group" id="login">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" placeholder="Password">
             </div>
-            <div class="dropdown-divider" id="login"></div>
-            <button type="submit" class="btn btn-primary" id="login-btn">Log In</button>
+            <div class="dropdown-divider"></div>
+            <button type="submit" class="btn btn-primary" id="loginSubmit">Log In</button>
           </form>
         </div>
       </li>
