--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,7 +16,7 @@
           Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Category 1</a>
+          <a class="dropdown-item" id="category1">Category 1</a>
           <a class="dropdown-item" href="#">Category 2</a>
           <a class="dropdown-item" href="#">Category 3</a>
         </div>
@@ -52,8 +52,24 @@
           </form>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">Sign Up
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <form>
+            <div class="form-group" id="login">
+              <label>Create a Username</label>
+              <input class="form-control" placeholder="Create Username">
+            </div>
+            <div class="form-group" id="login">
+              <label for="exampleInputPassword1">Create a Password</label>
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="dropdown-divider" id="login"></div>
+            <button type="submit" class="btn btn-primary" id="CreateAcc-btn">Create Account</button>
+          </form>
+        </div>
       </li>
     </ul>
   </div>
