--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -52,7 +52,7 @@
           </form>
         </div>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" id="sign-up">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">Sign Up
         </a>
