--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -47,7 +47,7 @@
             </div>
             <div class="form-group" id="login">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="password" class="form-control" placeholder="Password" id="userPassword">
             </div>
             <div class="dropdown-divider"></div>
             <button type="submit" class="btn btn-primary" id="loginSubmit">Log In</button>
