--- a/views/partials/_postform.handlebars
+++ b/views/partials/_postform.handlebars
@@ -41,7 +41,8 @@
 <div></div>
 <br><br>
 <div class="container">
-    <button type="button" class="btn btn-primary mt-10"><i class="fas fa-plus"></i> Start New Discussion</button>
+    <button type="button" class="btn btn-primary mt-10" id="newDiscussion"><i class="fas fa-plus"></i> Start New
+        Discussion</button>
 </div>
 <br>
 <br>
