--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,10 +3,10 @@
     <div class="card mt-5 mb-5">
         <div class="card-body">
 
-            <h6 class="card-subtitle mb-2 text-muted">John Adams</h6>
-            <a href="/post" class="forum">
-                <h5 class="card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
-            </a>
+            <h6 class="card-subtitle mb-2 text-muted">Post by: John Adams</h6>
+
+            <h5 class="card-title font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
+
 
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
@@ -33,7 +33,7 @@
                         </div>
                         <hr>
 
-                        <a href="#" class="card-link likes"><i class="far fa-heart"></i></a>
+                        <a href="#" class="card-link likes"><i class="far fa-heart 2x"></i></a>
                         <a href="#" class="card-link comments"><i class="far fa-comment-alt"></i></a>
                     </div>
 
@@ -103,5 +103,5 @@
         <textarea class="form-control" id="comment" placeholder="Post your comment" rows="3"
             spellcheck="false"></textarea>
     </div>
-    <button class="btn btn-success">Post</button>
+    <button class="btn btn-success" id="submit-comment">Post</button>
 </div>
