--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -26,7 +26,7 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Acount
+          Account
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Post</a>
@@ -55,7 +55,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
+        <a class="nav-link" href="/register">Sign Up</a>
       </li>
     </ul>
   </div>
