--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -41,14 +41,14 @@
           <form>
             <div class="form-group" id="login">
               <label>Username</label>
-              <input class="form-control" placeholder="Enter Username" id="userLogin">
+              <input class="form-control" placeholder="Enter Username">
             </div>
             <div class="form-group" id="login">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" placeholder="Password" id="userPassword">
+              <input type="password" class="form-control" placeholder="Password">
             </div>
-            <div class="dropdown-divider"></div>
-            <button type="submit" class="btn btn-primary" id="loginSubmit">Log In</button>
+            <div class="dropdown-divider" id="login"></div>
+            <button type="submit" class="btn btn-primary" id="login-btn">Log In</button>
           </form>
         </div>
       </li>
@@ -60,14 +60,14 @@
           <form>
             <div class="form-group" id="login">
               <label>Create a Username</label>
-              <input class="form-control" placeholder="Create Username">
+              <input class="form-control" placeholder="Create Username" id="createUsername">
             </div>
             <div class="form-group" id="login">
               <label for="exampleInputPassword1">Create a Password</label>
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="password" class="form-control" placeholder="Password" id="createPassword">
             </div>
             <div class="dropdown-divider" id="login"></div>
-            <button type="submit" class="btn btn-primary" id="CreateAcc-btn">Create Account</button>
+            <button type="submit" class="btn btn-primary" id="CreateBtn">Create Account</button>
           </form>
         </div>
       </li>
