login functionality changes

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -41,11 +41,11 @@
           <form>
             <div class="form-group" id="login">
               <label>Username</label>
-              <input class="form-control" placeholder="Enter Username" id="userLogin">
+              <input class="form-control" placeholder="Enter Username" id="userLogin" name="username">
             </div>
             <div class="form-group" id="login">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" placeholder="Password" id="userPassword">
+              <input type="password" class="form-control" placeholder="Password" id="userPassword" name="password">
             </div>
             <div class="dropdown-divider"></div>
             <button type="submit" class="btn btn-primary" id="loginSubmit">Log In</button>
@@ -58,16 +58,16 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <form>
-            <div class="form-group" id="login">
+            <div class="form-group" id="signup">
               <label>Create a Username</label>
-              <input class="form-control" placeholder="Create Username">
+              <input class="form-control" placeholder="Create Username" name="username" id="userSignup">
             </div>
             <div class="form-group" id="login">
               <label for="exampleInputPassword1">Create a Password</label>
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="password" class="form-control" placeholder="Password" name="password" id="passSignup">
             </div>
             <div class="dropdown-divider" id="login"></div>
-            <button type="submit" class="btn btn-primary" id="CreateAcc-btn">Create Account</button>
+            <button type="submit" class="btn btn-primary" id="createBtn">Create Account</button>
           </form>
         </div>
       </li>
