--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -30,7 +30,7 @@
           <a class="dropdown-item" href="#">Post</a>
           <a class="dropdown-item" href="#">Likes</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Log out</a>
+          <a class="dropdown-item" href="#" id="logoutBtn">Log out</a>
         </div>
       </li>
       <li class="nav-item dropdown">
