--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,9 +16,11 @@
           Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="../category1">Category 1</a>
-          <a class="dropdown-item" href="../category2">Category 2</a>
-          <a class="dropdown-item" href="../category3">Category 3</a>
+          <a class="dropdown-item" href="../category1">Sports</a>
+          <a class="dropdown-item" href="../category2">Gaming</a>
+          <a class="dropdown-item" href="../category3">Food</a>
+          <a class="dropdown-item" href="../category3">Programing</a>
+          <a class="dropdown-item" href="../category3">General</a>
         </div>
       </li>
       <li class="nav-item dropdown">
